Bug 1815993: Clean up WebTransport connection rejection to match spec r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D169416